[docker-compose.yaml](../deploy/docker/middleware/docker-compose.yaml)